--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 384806303040.dkr.ecr.us-east-1.amazonaws.com/demo
+        image: 384806303040.dkr.ecr.us-east-1.amazonaws.com/demokube
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
